# QDetachTabWidget

./: LICENSE  README.md
src/: CMakeLists.txt  QDetachTabWidget.cpp  main.cpp
